# half-america

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  METHODOLOGY.md  PROJECT_SUMMARY.md  README.md  README_alt.md  README_alt2.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: API.md  tab_strategy.md
docs/archive/: PROJECT_SUMMARY.md  tab_strategy.md
src/half_america/: __init__.py  cli.py  config.py
src/half_america/data/: __init__.py  cache.py  census.py  cleaning.py  constants.py  pipeline.py  tiger.py
src/half_america/graph/: __init__.py  adjacency.py  boundary.py  network.py  pipeline.py
src/half_america/optimization/: __init__.py  search.py  solver.py  sweep.py
src/half_america/postprocess/: __init__.py  dissolve.py  export.py  simplify.py
tests/: conftest.py  test_cleaning.py  test_constants.py  test_integration.py  test_sanity.py
tests/benchmarks/: __init__.py  conftest.py  test_network_bench.py  test_solver_bench.py
tests/test_graph/: __init__.py  conftest.py  test_adjacency.py  test_boundary.py  test_integration.py  test_network.py  test_pipeline.py
tests/test_optimization/: __init__.py  conftest.py  test_correctness.py  test_search.py  test_solver.py  test_sweep.py
tests/test_postprocess/: __init__.py  conftest.py  test_dissolve.py  test_export.py  test_simplify.py
thoughts/shared/plans/: 2025-01-21-lightweight-quality-automation.md  2025-11-20-phase1-data-pipeline.md  2025-11-20-readme-and-license.md  2025-11-21-binary-search-lagrange-multiplier.md  2025-11-21-dissolve-tracts-implementation.md  2025-11-21-lambda-one-exclusion.md  2025-11-21-lambda-parameter-sweep.md  2025-11-21-lambda-unit-scaling-bug.md  2025-11-21-optimization-correctness-tests.md  2025-11-21-performance-benchmarking-infrastructure.md  2025-11-21-phase1-documentation-updates.md  2025-11-21-phase2-documentation-updates.md  2025-11-21-phase2-graph-construction.md  2025-11-21-phase3-documentation-updates.md  2025-11-21-precompute-lambda-persistence.md  2025-11-21-readme-content-quality.md  2025-11-21-readme-organization.md  2025-11-21-readme-restructuring.md  2025-11-21-repo-rename.md  2025-11-21-solver-wrapper.md  2025-11-22-claude-md-improvements.md  2025-11-22-documentation-framing-improvements.md  2025-11-22-phase4-documentation-improvements.md  2025-11-22-population-selected-metadata.md  2025-11-22-readme-restructuring.md  2025-11-22-subphase-5-1-project-setup.md  2025-11-22-subphase-5-2-core-visualization.md  2025-11-22-topojson-export.md  2025-11-22-visvalingam-whyatt-simplification.md  2025-11-23-fine-lambda-granularity.md  2025-11-23-method-tab-content.md  2025-11-23-population-fraction-fix.md  2025-11-23-story-tab-content.md  2025-11-23-subphase-5-3-deployment.md  2025-11-23-tab-structure-implementation.md  2025-11-24-documentation-methodology-framing.md  2025-11-24-lambda-decimal-precision-fix.md  2025-11-24-legend-redesign.md  (+10 more)
web/: .gitignore  GITHUB_SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: combined.json  (+105 more)
web/src/: App.css  App.tsx  index.css
(+86 files in other folders)
