[project]
name = "half-america"
version = "0.1.0"
description = "Topology optimization experiment visualizing US population distribution with smooth, organic shapes"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Steven Fazzio", email = "fazzios@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
half-america = "half_america:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
